--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,11 @@ classifiers = [
 ]
 requires-python = ">=3.8"
 # Declare any run-time dependencies that should be installed with the package.
-#dependencies = [
-#    "importlib-resources;python_version<'3.10'",
-#]
+dependencies = [
+    "importlib-resources;python_version<'3.10'",
+    "pyemma",
+    "prody"
+]
 
 # Update the urls once the hosting is set up.
 #[project.urls]
