--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -49,7 +49,7 @@ jobs:
         # conda setup requires this special shell
         shell: bash -l {0}
         run: |
-          python -m pip install . --no-deps
+          python -m pip install .
           micromamba list
 
       - name: Run tests
