--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,9 @@ requires-python = ">=3.8"
 dependencies = [
     "importlib-resources;python_version<'3.10'",
     "pyemma",
-    "prody"
+    "prody",
+    "nglviewer",
+    "ipywidgets=7"
 ]
 
 # Update the urls once the hosting is set up.
