--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "pyemma",
     "prody",
     "nglviewer",
-    "ipywidgets=7"
+    "ipywidgets<'8.0'"
 ]
 
 # Update the urls once the hosting is set up.
