--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -21,9 +21,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        #os: [macOS-latest, ubuntu-latest, windows-latest]
+        os: [macOS-latest, ubuntu-latest, windows-latest]
         #python-version: [3.8, 3.9, "3.10"]
-        os: [ubuntu-latest]
+        #os: [ubuntu-latest]
         python-version: [3.8]
 
     steps:
