--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
     "importlib-resources;python_version<'3.10'",
     "pyemma",
     "prody",
-    "nglviewer",
+    "nglview",
     "ipywidgets<8"
 ]
 
