--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,11 @@ requires-python = ">=3.8"
 # Declare any run-time dependencies that should be installed with the package.
 dependencies = [
     "importlib-resources;python_version<'3.10'",
+    "numpy",
+    "scipy",
+    "pandas",
+    "matplotlib",
+    "seaborn",
     "pyemma",
     "prody",
     "nglview",
