--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -19,9 +19,10 @@ jobs:
   test:
     name: Test on ${{ matrix.os }}, Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
+    max-parallel: 1
     strategy:
       matrix:
-        os: [macOS-latest, ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest, macOS-latest]
         #python-version: [3.8, 3.9, "3.10"]
         #os: [ubuntu-latest]
         python-version: [3.8]
