--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -50,6 +50,7 @@ jobs:
         # conda setup requires this special shell
         shell: bash -l {0}
         run: |
+          python -m pip install numpy
           python -m pip install .
           micromamba list
 
