--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ requires-python = ">=3.8"
 dependencies = [
     "importlib-resources;python_version<'3.10'",
     "numpy",
+    "scikit-learn",
     "scipy",
     "pandas",
     "matplotlib",
@@ -30,6 +31,7 @@ dependencies = [
     "pyemma",
     "prody",
     "nglview",
+    "ffmpeg",
     "ipywidgets<8"
 ]
 
